[gd_scene load_steps=7 format=3 uid="uid://b3hux6c6p4pfu"]

[ext_resource type="Script" path="res://Battle/UI/BattleUI.gd" id="1_0uu34"]
[ext_resource type="Texture2D" uid="uid://byjtyvd0qo63j" path="res://sprites/backgrounds/bg_shadow.png" id="3_0sd1p"]
[ext_resource type="PackedScene" uid="uid://bgy4kes6sp7tp" path="res://Battle/UI/EndScreen.tscn" id="3_1dct8"]
[ext_resource type="Script" path="res://Battle/UI/MoveButton.gd" id="3_lohjo"]
[ext_resource type="Script" path="res://sprites/Anime.gd" id="4_tevqn"]
[ext_resource type="PackedScene" uid="uid://cvmuwhverwiv0" path="res://Battle/UI/InBattleSummary.tscn" id="9_d62vi"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0uu34")

[node name="Rows" type="ReferenceRect" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 204.0
offset_right = 1801.0
offset_bottom = 555.0
mouse_filter = 2

[node name="EnemyRow" type="HBoxContainer" parent="Rows"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -618.0
offset_top = -175.0
offset_bottom = 175.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 50

[node name="AllyRow" type="HBoxContainer" parent="Rows"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -174.5
offset_right = 713.0
offset_bottom = 174.5
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 50
alignment = 2

[node name="BattleLog" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 842.0
offset_right = 1176.0
offset_bottom = 866.0

[node name="Moves" type="ReferenceRect" parent="."]
visible = false
layout_mode = 0
offset_left = 768.0
offset_top = 867.0
offset_right = 1280.0
offset_bottom = 1051.0
mouse_filter = 2

[node name="Button" type="Button" parent="Moves"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.04
offset_left = 136.0
offset_top = 24.0
offset_right = 208.128
offset_bottom = 63.64
script = ExtResource("3_lohjo")

[node name="Button3" type="Button" parent="Moves"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.04
offset_left = 136.0
offset_top = 112.0
offset_right = 208.128
offset_bottom = 151.64
script = ExtResource("3_lohjo")

[node name="Button2" type="Button" parent="Moves"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.04
offset_left = 256.0
offset_top = 24.0
offset_right = 328.128
offset_bottom = 64.64
script = ExtResource("3_lohjo")

[node name="Button4" type="Button" parent="Moves"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.04
offset_left = 256.0
offset_top = 112.0
offset_right = 328.128
offset_bottom = 152.64
script = ExtResource("3_lohjo")

[node name="Background" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(954.196, 544.538)
scale = Vector2(1.00605, 1.02123)
texture = ExtResource("3_0sd1p")

[node name="BattleSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 80.0
offset_right = 766.0
offset_bottom = 443.0
script = ExtResource("4_tevqn")

[node name="Outline" type="ReferenceRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 2
offset_left = 512.0
offset_top = 71.0
offset_right = 612.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 0.843137, 0, 0)
border_width = 5.0
editor_only = false

[node name="TurnQueue" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 71.0
offset_right = 1562.0
offset_bottom = 200.0

[node name="EndScreen" parent="." instance=ExtResource("3_1dct8")]
visible = false
position = Vector2(416, 192)

[node name="CreatureSummary" parent="." instance=ExtResource("9_d62vi")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 266.0
offset_top = 723.0
offset_right = 2143.0
offset_bottom = 1075.0
scale = Vector2(0.75, 0.75)

[connection signal="move_selected" from="Moves/Button" to="." method="_on_button_move_selected"]
[connection signal="move_selected" from="Moves/Button3" to="." method="_on_button_move_selected"]
[connection signal="move_selected" from="Moves/Button2" to="." method="_on_button_move_selected"]
[connection signal="move_selected" from="Moves/Button4" to="." method="_on_button_move_selected"]
